[FIX] sap.m.ObjectHeader: vertical alignment
* now a comma is not cut off

BCP: 002075129400005622642021
CR-Id: 002075125900004445572021

--- a/src/sap.m/src/sap/m/themes/base/ObjectHeader.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectHeader.less
@@ -231,7 +231,7 @@ html .sapUiContainer-Narrow .sapMOHTitleArrow .sapUiIcon {
 }
 
 .sapMOHNumberDiv {
-	margin-top: 0.6875rem;
+	margin-top: 0.375rem;
 	display: inline-block;
 	float: right;
 	text-align: end;
@@ -860,6 +860,7 @@ html.sap-phone .sapMOHTitle h1 > .sapMText {
 	font-size: 1.375rem;
 	font-weight: @sapUiFontHeaderWeight;
 	white-space: nowrap;
+	line-height: initial;
 }
 
 .sapMOHNumberDiv .sapMObjectNumberUnit {
